# backwither

./: .gitignore  Doxyfile  Makefile  prohlaseni.txt  readme.md
.github/workflows/: c-cpp.yml
examples/: info.txt
src/: Backup.cpp  Backup.h  BackupIndexProvider.h  BackupJob.cpp  BackupJob.h  BackupPlan.cpp  BackupPlan.h  BackupPlanIterator.cpp  BackupPlanIterator.h  BackupStorageProvider.cpp  BackupStorageProvider.h  BasicDirectoryComparator.h  CMakeLists.txt  Chunk.cpp  Chunk.h  ChunkList.cpp  ChunkList.h  ChunkListIterator.cpp  ChunkListIterator.h  ChunkStorageProvider.cpp  ChunkStorageProvider.h  CompressedFilesystemChunkStorageProvider.cpp  CompressedFilesystemChunkStorageProvider.h  ConfigProvider.cpp  ConfigProvider.h  Directory.cpp  Directory.h  DirectoryComparator.h  DirectoryDiffIterator.cpp  DirectoryDiffIterator.h  DirectoryIterator.cpp  DirectoryIterator.h  File.cpp  File.h  FileChunker.cpp  FileChunker.h  FileComparator.cpp  FileComparator.h  FilesystemBackupStorageProvider.cpp  FilesystemBackupStorageProvider.h  (+38 more)
src/Backup/: BackupIndexProvider.h  BackupJob.cpp  BackupJob.h  BackupPlan.cpp  BackupPlan.h  ChunkList.h  ConfigProvider.h  SQLiteBackupIndexProvider.cpp  SQLiteBackupIndexProvider.h  SQLiteConfigProvider.cpp  SQLiteConfigProvider.h  Snapshot.h  SnapshotList.h  TimeUtils.h
src/Filesystem/: BasicDirectoryComparator.h  ChunkStorageProvider.h  CompressedFilesystemChunkStorageProvider.h  Directory.h  File.h  FileChunker.cpp  FileChunker.h  FilesystemChunkStorageProvider.h  FilesystemEntity.h  FilesystemUtils.cpp  FilesystemUtils.h  TimeDirectoryComparator.cpp  TimeDirectoryComparator.h
src/Iterators/: BackupPlanIterator.cpp  BackupPlanIterator.h  ChunkListIterator.cpp  ChunkListIterator.h  DirectoryDiffIterator.cpp  DirectoryDiffIterator.h  DirectoryIterator.cpp  DirectoryIterator.h  SnapshotListIterator.cpp  SnapshotListIterator.h
src/UI/: TerminalUserInterface.cpp  TerminalUserInterface.h  UserInterface.h
src/tests/: asserts.cpp  includes.h  test.cpp  testbench.cpp
